--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile 'com.android.support:design:23.1.1'
     // A library to show circle image view used in the header of navigation drawer
     compile 'de.hdodenhof:circleimageview:1.3.0'
+    compile 'com.squareup.okhttp3:okhttp:3.1.2'
 }
