--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,8 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    buildToolsVersion "21" +
+            ".1.2"
 
     defaultConfig {
         applicationId "com.hisham.testdelete"
@@ -22,9 +23,12 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+    // A library to show circle image view used in the header of navigation drawer
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
-    // A library to show circle image view used in the header of navigation drawer
     compile 'de.hdodenhof:circleimageview:1.3.0'
     compile 'com.squareup.okhttp3:okhttp:3.1.2'
+    compile 'com.android.support:support-v4:23.1.1'
+    compile 'com.android.support:recyclerview-v7:23.1.1'
+    compile 'com.google.code.gson:gson:2.3.1'
 }
