--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,14 +21,15 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     // A library to show circle image view used in the header of navigation drawer
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.android.support:design:23.1.1'
+    compile 'com.android.support:appcompat-v7:23.2.0'
+    compile 'com.android.support:design:23.2.0'
     compile 'de.hdodenhof:circleimageview:1.3.0'
     compile 'com.squareup.okhttp3:okhttp:3.1.2'
-    compile 'com.android.support:support-v4:23.1.1'
-    compile 'com.android.support:recyclerview-v7:23.1.1'
+    compile 'com.android.support:support-v4:23.2.0'
+    compile 'com.android.support:recyclerview-v7:23.2.0'
     compile 'com.google.code.gson:gson:2.3.1'
+    compile 'com.google.android.gms:play-services:8.4.0'
 }
